template para responsivo com tailwind completo

--- a/src/index.html
+++ b/src/index.html
@@ -11,12 +11,12 @@
   <link rel="stylesheet" href="css/styles.css">
 </head>
 
-<body class="text-Work-Sans text-sm leading-5">
-  <main>
-    <header class="bg-intro bg-blue-bg font-bold text-white text-center text-26 leading-8 py-14">
+<body class="text-Work-Sans text-sm leading-5 md:min-h-screen md:bg-body md:flex md:items-center md:justify-center">
+  <main class="md:flex-1 md:max-w-414 md:mx-auto">
+    <header class="bg-intro bg-blue-bg font-bold text-white text-center text-26 leading-8 py-14 md:rounded-t-xl">
       <h1 class="max-w-270 mx-auto">Creating email templates has never been easier.</h1>
     </header>
-    <div>
+    <div class="bg-white pb-4">
       <h2 class="py-6 mx-auto text-center max-w-xs text-dark-grey">Receive daily emails on how to best create email templates, completely free.</h2>
       <form class="px-4">
         <div class="flex items-center gap-x-2">
@@ -35,7 +35,7 @@
       </div>
     </div>
 
-    <footer class="px-4">
+    <footer class="pb-4 bg-white md:rounded-b-xl">
       <p class="text-dark-grey text-center max-w-340 mx-auto">
         "By far one of the best newsletter i've ever subscribed to. It is sent biweekly and i'm always looking forward to their emails."
       </p>
